# meta2fb

./: LICENSE  pyproject.toml
meta2fn/: __init__.py  metadatarenamer.py
tests/: test_meta2fn.py
